--- a/public/index.html
+++ b/public/index.html
@@ -37,7 +37,7 @@
 
             const body = { id_token: response.credential } // debe de mantar el token, manda el token de google sus credenciales
 
-            fetch('https://node-restserver-basic-production.up.railway.app/api/auth/google',{ //'http://localhost:8080/api/auth/google'||
+            fetch('http://localhost:8080/api/auth/google',{ //'http://localhost:8080/api/auth/google'||
                 method:'POST',
                 headers:{
                     'Content-Type':'application/json'
